feat(cmake): remove LUA_BINDINGS_LINK_LIBS
Signed-off-by: Longtao Zhang <DragonBillow@outlook.com>

--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -13,10 +13,6 @@ set(RMLUI_RLOTTIE_EXTERNAL ON CACHE BOOL "Use external RLOTTIE")
 set(RMLUI_LUA_EXTERNAL ON CACHE BOOL "Use external LUA, this ask RmlUi_External::Lua target be set")
 set(BUILD_LUA_BINDINGS ON CACHE BOOL "Build Lua bindings")
 
-find_package(Lua REQUIRED)
-add_library(Lua_LIB INTERFACE)
-add_library(RmlUi_External::Lua ALIAS Lua_LIB)
-target_link_libraries(Lua_LIB INTERFACE lualib)
-target_include_directories(Lua_LIB INTERFACE ./lua)
+include(BuildLua)
 
 add_subdirectory(RmlUi)
